P05/K8S/Ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ms-ingress
  namespace: proyecto-sa
  labels:
    app: proyecto-sa
  annotations:
    # kubernetes.io/ingress.global-static-ip-name: "sa-proyecto-ipc-ingress-production"
    # nginx.ingress.kubernetes.io/rewrite-target: "/" 
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - http:
        paths:
          - path: /api/album(/|$)(.*)
          # - path: /api/album
            pathType: ImplementationSpecific
            # pathType: Prefix
            backend:
              service:
                name: ms-albumes
                port: 
                  number: 5100
          - path: /api/artista(/|$)(.*)
          # - path: /api/artista
            pathType: ImplementationSpecific
            # pathType: Prefix
            backend:
              service:
                name: ms-artistas
                port: 
                  number: 5200
          - path: /api/cancion(/|$)(.*)
          # - path: /api/cancion
            pathType: ImplementationSpecific
            # pathType: Prefix
            backend:
              service:
                name: ms-canciones
                port: 
                  number: 5300
          - path: /api/reproduccion(/|$)(.*)
          # - path: /api/reproduccion
            pathType: ImplementationSpecific
            # pathType: Prefix
            backend:
              service:
                name: ms-reproducciones
                port: 
                  number: 5400


# Instalar nginx para usarlo
# kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/main/deploy/static/provider/kind/deploy.yaml
# kubectl get svc -n ingress-nginx    // este es para ver que puerto usar
# kubectl label nodes kind-control-plane ingress-ready=true
# kubectl get svc -n proyecto-sa
# kubectl get ingress -n proyecto-sa
# kubectl port-forward -n ingress-nginx svc/ingress-nginx-controller 8080:80
